--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
 <body>
     <header>
         <nav>
-            <a href="#"><img src="" alt="Логотип Ботаники"></a>
+            <a href="#"><img src="img/logo_header.svg" width="100" height="33" alt="Логотип Ботаники"></a>
             <ul>
                 <li><a href="#">Каталог</a></li>
                 <li><a href="#">Доставка и оплата</a></li>
@@ -20,11 +20,13 @@
     </header>
     <main>
         <section>
-            <h1>Авторские букеты в Петербурге</h1>
-            <p>Оригинальные свежие букеты с доставкой по всему городу</p>
-            <a href="#">Смотреть каталог</a>
-            <img src="" alt="Букет с тюльпанами">
-            <img src="" alt="Букет с розами">
+	    <div>
+            	<h1>Авторские букеты в Петербурге</h1>
+            	<p>Оригинальные свежие букеты с доставкой по всему городу</p>
+            	<a href="#">Смотреть каталог</a>
+	    </div>
+            <img src="img/bouquet_of_tulips.jpg" width="386" height="404" alt="Букет с тюльпанами">
+            <img src="img/bouquet_of_roses.jpg" width="387" height="420" alt="Букет с розами">
         </section>
         <section>
             <ul>
@@ -49,11 +51,11 @@
                 <p>Элегантный букет, который станет отличным подарком на день рождения или юбилей.</p>
                 <p>30&#215;40 см</p>
                 <p>3600 руб.</p>
-                <button type="button"></button>
-                <img src="" alt='Букет "Нежность"'>
+                <button type="button">Заказать</button>
+                <img src="img/bouquet_tenderness.png" width="387" height="438" alt='Букет "Нежность"'>
             </div>
-            <button type="button"></button>
-            <button type="button"></button>
+            <button type="button">Назад</button>
+            <button type="button">Вперед</button>
         </section>
         <section>
             <ul>
@@ -76,7 +78,7 @@
                 <h2>Скидка 10% на первый заказ</h2>
                 <p>Если заказываете у нас букет впервые-при оформлении заказа введите промокод "Botanika2021" и получите скидку 10%</p>
             </div>
-            <img src="" alt="Букет цветов">
+            <img src="img/bouquet_discount.jpg" width="590" height="391" alt="Букет цветов">
         </section>   
         <section>
             <h2>4 шага к идеальному букету</h2>
@@ -110,10 +112,10 @@
                 </ul>
             </div>
             <div>
-                <img src="" alt="Букет цветов">
-                <img src="" alt="Букет цветов">
+                <img src="img/bouquet_news_1.jpg" width="285" height="220" alt="Букет цветов">
+                <img src="img/bouquet_news_2.jpg" width="285" height="220" alt="Букет цветов">
             </div>
-                <img src="" alt="Букет цветов">
+                <img src="img/bouquet_news_3.jpg" width="387" height="460" alt="Букет цветов">
                 </section>
         <section>
             <h2>Отзывы</h2>
@@ -144,11 +146,11 @@
                 <p>Напишите нам:</p>
                 <p><a href="mailto:info@botanika.ru">info@botanika.ru</a></p>
             </div>
-            <img src="" alt="Карта офиса по адресу: Санкт-Петербург, ул. Большая Конюшенная, 19">
+            <img src="img/botanika_map.png" width="1440" height="645" alt="Карта офиса по адресу: Санкт-Петербург, ул. Большая Конюшенная, 19">
         </section>
     </main>
     <footer>
-        <a href="#"><img src="" alt="Логотип Ботаники"></a>
+        <a href="#"><img src="img/logo_footer.svg" width="100" height="33" alt="Логотип Ботаники"></a>
         <ul>
             <li><a href="#">Каталог</a></li>
             <li><a href="#">Доставка и оплата</a></li>
