--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Ботаника-цветы в Петербурге</title>
 </head>
 <body>
+    <div class="container">
     <header>
-        <nav>
+        <nav class="header-nav">
             <a href="#"><img src="img/logo_header.svg" width="100" height="33" alt="Логотип Ботаники"></a>
-            <ul>
+            <ul class="header-list">
                 <li><a href="#">Каталог</a></li>
                 <li><a href="#">Доставка и оплата</a></li>
                 <li><a href="#">Отзывы</a></li>
@@ -19,16 +25,16 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="authors-bouquet">
 	    <div>
-            	<h1>Авторские букеты в Петербурге</h1>
+            	<h1>Авторские букеты <span>в Петербурге</span></h1>
             	<p>Оригинальные свежие букеты с доставкой по всему городу</p>
             	<a href="#">Смотреть каталог</a>
 	    </div>
             <img src="img/bouquet_of_tulips.jpg" width="386" height="404" alt="Букет с тюльпанами">
             <img src="img/bouquet_of_roses.jpg" width="387" height="420" alt="Букет с розами">
         </section>
-        <section>
+        <section class="advantages">
             <ul>
                 <li>
                     <h3>Быстрая доставка</h3>
@@ -44,43 +50,49 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="popular-bouquet">
             <h2>Популярные букеты</h2>
-            <div>
+            <div class="popular-bouquet__tenderness">
                 <h3>Букет "Нежность"</h3>
-                <p>Элегантный букет, который станет отличным подарком на день рождения или юбилей.</p>
-                <p>30&#215;40 см</p>
-                <p>3600 руб.</p>
-                <button type="button">Заказать</button>
+                <p class="popular-bouquet__description">Элегантный букет, который станет отличным подарком на день рождения или юбилей.</p>
+                <p class="popular-bouquet__size">30&#215;40 см</p>
+                <p class="popular-bouquet__price">3600 руб.</p>
+                <button class="popular-bouquet__button-order" type="button">Заказать</button>
                 <img src="img/bouquet_tenderness.png" width="387" height="438" alt='Букет "Нежность"'>
             </div>
-            <button type="button">Назад</button>
-            <button type="button">Вперед</button>
+            <button class="popular-bouquet__slider-button-back" type="button"><span class="visually-hidden">Назад</span></button>
+            <button class="popular-bouquet__slider-button-forward" type="button"><span class="visually-hidden">Вперед</span></button>
         </section>
         <section>
-            <ul>
+            <ul class="bouquet-catalog">
                 <li><a href="#">
+                    <div>
                     <h3>Свадебные букеты</h3>
                     <p>Букеты для невест</p>
+                    </div>
                 </a></li>
                 <li><a href="#">
+                    <div>
                     <h3>Букеты с пионами</h3>
                     <p>Букеты с сезонными пионами</p>
+                </div>
                 </a></li>
                 <li><a href="#">
+                    <div>
                     <h3>Выбрать букет</h3>
                     <p>Букеты в ассортименте</p>
+                </div>
                 </a></li>
             </ul>
         </section>
-        <section>
+        <section class="sale">
             <div>
                 <h2>Скидка 10% на первый заказ</h2>
                 <p>Если заказываете у нас букет впервые-при оформлении заказа введите промокод "Botanika2021" и получите скидку 10%</p>
             </div>
             <img src="img/bouquet_discount.jpg" width="590" height="391" alt="Букет цветов">
         </section>   
-        <section>
+        <section class="ideal-bouquet">
             <h2>4 шага к идеальному букету</h2>
             <ul>
                 <li>
@@ -101,14 +113,14 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="news">
             <div>
                 <h2>Следите за нашими новостями</h2>
                 <p>Подписывайтесь на наши соцсети и узнавайте о новинках и акциях первым.</p>
                 <ul>
-                    <li><a href="#">Инстаграмм</a></li>
-                    <li><a href="#">Фейсбук</a></li>
-                    <li><a href="#">Твиттер</a></li>
+                    <li><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
+                    <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+                    <li><a href="#"><span class="visually-hidden">Твиттер</span></a></li>
                 </ul>
             </div>
             <div>
@@ -117,7 +129,7 @@
             </div>
                 <img src="img/bouquet_news_3.jpg" width="387" height="460" alt="Букет цветов">
                 </section>
-        <section>
+        <section class="reviews">
             <h2>Отзывы</h2>
             <ul>
                 <li>
@@ -134,8 +146,8 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <div>
+        <section class="contacts">
+            <div class="contacts__card">
                 <h2>Мы вас ждем</h2>
                 <p>Приходите к нам:</p>
                 <p>Санкт-Петербург, <br> ул. Большая Конюшенная, 19</p>
@@ -151,18 +163,19 @@
     </main>
     <footer>
         <a href="#"><img src="img/logo_footer.svg" width="100" height="33" alt="Логотип Ботаники"></a>
-        <ul>
+        <ul class="footer-nav">
             <li><a href="#">Каталог</a></li>
             <li><a href="#">Доставка и оплата</a></li>
             <li><a href="#">Отзывы</a></li>
             <li><a href="#">Спецпредложения</a></li>
             <li><a href="#">Контакты</a></li>
         </ul>
-        <ul>
-            <li><a href="#">Инстаграмм</a></li>
-            <li><a href="#">Фейсбук</a></li>
-            <li><a href="#">Твиттер</a></li>
+        <ul class="footer-link">
+            <li><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
+            <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+            <li><a href="#"><span class="visually-hidden">Твиттер</span></a></li>
         </ul>
     </footer>
+    </div>
 </body>
 </html>
