--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
     <div class="container">
     <header>
+        <div class="header-wrapper">
         <nav class="header-nav">
-            <a href="#"><img src="img/logo_header.svg" width="100" height="33" alt="Логотип Ботаники"></a>
+            <a class="header-logo" href="#"><img src="img/logo_header.svg" width="100" height="33" alt="Логотип Ботаники"></a>
             <ul class="header-list">
                 <li><a href="#">Каталог</a></li>
                 <li><a href="#">Доставка и оплата</a></li>
@@ -23,6 +24,7 @@
                 <li><a href="#">Корзина</a></li>
             </ul>
         </nav>
+    </div>
     </header>
     <main>
         <section class="authors-bouquet">
