--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <button class="popular-bouquet__slider-button-back" type="button"><span class="visually-hidden">Назад</span></button>
             <button class="popular-bouquet__slider-button-forward" type="button"><span class="visually-hidden">Вперед</span></button>
         </section>
-        <section>
-            <ul class="bouquet-catalog">
+        <section class="bouquet-catalog">
+            <ul class="bouquet-catalog__list">
                 <li><a href="#">
                     <div>
                     <h3>Свадебные букеты</h3>
@@ -88,26 +88,28 @@
             </ul>
         </section>
         <section class="sale">
-            <div>
-                <h2>Скидка 10% на первый заказ</h2>
-                <p>Если заказываете у нас букет впервые-при оформлении заказа введите промокод "Botanika2021" и получите скидку 10%</p>
+            <div class="sale__text">
+                <h2>Скидка 10% <br> на первый заказ</h2>
+                <p>Если заказываете у нас букет впервые &mdash; при оформлении заказа введите промокод &laquo;Botanika2021&raquo; и получите скидку 10%</p>
             </div>
+            <div class="sale__img">
             <img src="img/bouquet_discount.jpg" width="590" height="391" alt="Букет цветов">
+            </div>
         </section>   
         <section class="ideal-bouquet">
             <h2>4 шага к идеальному букету</h2>
-            <ul>
+            <ul class="ideal-bouquet__list">
                 <li>
                     <h3>Заказ</h3>
                     <p>Выбирите понравившийся букет из каталога и оформите заказ</p>
                 </li>
                 <li>
                     <h3>Уточнение деталей</h3>
-                    <p>Наш флорист позвонит вам после оформления заказа, чтобы уточнить детали</p>
+                    <p>Наш флорист позвонит вам <br> после оформления заказа, чтобы уточнить детали</p>
                 </li>
                 <li>
                     <h3>Оплата</h3>
-                    <p>Оплатить заказ можно онлайн на сайте или при получении</p>
+                    <p>Оплатить заказ можно онлайн <br> на сайте или при получении</p>
                 </li>
                 <li>
                     <h3>Доставка</h3>
@@ -116,20 +118,18 @@
             </ul>
         </section>
         <section class="news">
-            <div>
+            <div class="news__social">
                 <h2>Следите за нашими новостями</h2>
-                <p>Подписывайтесь на наши соцсети и узнавайте о новинках и акциях первым.</p>
+                <p>Подписывайтесь на наши соцсети и узнавайте <br> о новинках и акциях первым.</p>
                 <ul>
                     <li><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
                     <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
                     <li><a href="#"><span class="visually-hidden">Твиттер</span></a></li>
                 </ul>
             </div>
-            <div>
-                <img src="img/bouquet_news_1.jpg" width="285" height="220" alt="Букет цветов">
-                <img src="img/bouquet_news_2.jpg" width="285" height="220" alt="Букет цветов">
-            </div>
-                <img src="img/bouquet_news_3.jpg" width="387" height="460" alt="Букет цветов">
+                <img class="news__bouquet-1" src="img/bouquet_news_1.jpg" width="285" height="220" alt="Букет цветов">
+                <img class="news__bouquet-2" src="img/bouquet_news_2.jpg" width="285" height="220" alt="Букет цветов">
+                <img class="news__bouquet-3" src="img/bouquet_news_3.jpg" width="387" height="460" alt="Букет цветов">
                 </section>
         <section class="reviews">
             <h2>Отзывы</h2>
