--- a/index.html
+++ b/index.html
@@ -55,15 +55,17 @@
         <section class="popular-bouquet">
             <h2>Популярные букеты</h2>
             <div class="popular-bouquet__tenderness">
-                <h3>Букет "Нежность"</h3>
+                <h3>Букет &laquo;Нежность&raquo;</h3>
                 <p class="popular-bouquet__description">Элегантный букет, который станет отличным подарком на день рождения или юбилей.</p>
-                <p class="popular-bouquet__size">30&#215;40 см</p>
+                <p class="popular-bouquet__size">30&thinsp; &#215; &thinsp;40 см</p>
                 <p class="popular-bouquet__price">3600 руб.</p>
                 <button class="popular-bouquet__button-order" type="button">Заказать</button>
-                <img src="img/bouquet_tenderness.png" width="387" height="438" alt='Букет "Нежность"'>
             </div>
+            <img src="img/bouquet_tenderness.png" width="387" height="438" alt='Букет "Нежность"'>
+            <div class="button-wrapper">
             <button class="popular-bouquet__slider-button-back" type="button"><span class="visually-hidden">Назад</span></button>
             <button class="popular-bouquet__slider-button-forward" type="button"><span class="visually-hidden">Вперед</span></button>
+            </div>
         </section>
         <section class="bouquet-catalog">
             <ul class="bouquet-catalog__list">
@@ -135,16 +137,16 @@
             <h2>Отзывы</h2>
             <ul>
                 <li>
-                    <p>Все очень понравилось! Быстрое оформление заказа, выбор удобного времени доставки. Всем большое спасибо!</p>
-                    <h3>Марина</h3>
+                    <blockquote>Все очень понравилось! Быстрое оформление заказа, выбор удобного времени доставки. Всем большое спасибо!</blockquote>
+                    <cite>Марина</cite>
                 </li>
                 <li>
-                    <p>Внимательные флористы, вежливые. Магазин находится прям рядом с метро. Букет очень понравился, буду еще заказывать!</p>
-                    <h3>Татьяна</h3>
+                    <blockquote>Внимательные флористы, вежливые. Магазин находится прям рядом с метро. Букет очень понравился, буду еще заказывать!</blockquote>
+                    <cite>Татьяна</cite>
                 </li>
                 <li>
-                    <p>Выбор букетов на любой вкус и цену. Бывают хорошие скидки, а флористы всегда помогут и точно соберут красивый букет!</p>
-                    <h3>Ольга</h3>
+                    <blockquote>Выбор букетов на любой вкус и цену. Бывают хорошие скидки, а флористы всегда помогут и точно соберут красивый букет!</blockquote>
+                    <cite>Ольга</cite>
                 </li>
             </ul>
         </section>
