--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <cite>Татьяна</cite>
                 </li>
                 <li>
-                    <blockquote>Выбор букетов на любой вкус и цену. Бывают хорошие скидки, а флористы всегда помогут и точно соберут красивый букет!</blockquote>
+                    <blockquote>Выбор букетов на любой вкус <br> и цену. Бывают хорошие скидки, <br> а флористы всегда помогут и точно соберут красивый букет!</blockquote>
                     <cite>Ольга</cite>
                 </li>
             </ul>
