--- a/index.html
+++ b/index.html
@@ -11,175 +11,180 @@
 </head>
 <body>
     <div class="container">
-    <header>
-        <div class="header-wrapper">
-        <nav class="header-nav">
-            <a class="header-logo" href="#"><img src="img/logo_header.svg" width="100" height="33" alt="Логотип Ботаники"></a>
-            <ul class="header-list">
-                <li><a href="#">Каталог</a></li>
-                <li><a href="#">Доставка и оплата</a></li>
-                <li><a href="#">Отзывы</a></li>
-                <li><a href="#">Спецпредложения</a></li>
-                <li><a href="#">Контакты</a></li>
-                <li><a href="#">Корзина</a></li>
-            </ul>
-        </nav>
-    </div>
-    </header>
-    <main>
-        <section class="authors-bouquet">
-	    <div>
-            	<h1>Авторские букеты <span>в Петербурге</span></h1>
-            	<p>Оригинальные свежие букеты с доставкой по всему городу</p>
-            	<a href="#">Смотреть каталог</a>
-	    </div>
-            <img src="img/bouquet_of_tulips.jpg" width="386" height="404" alt="Букет с тюльпанами">
-            <img src="img/bouquet_of_roses.jpg" width="387" height="420" alt="Букет с розами">
-        </section>
-        <section class="advantages">
-            <ul>
-                <li>
-                    <h3>Быстрая доставка</h3>
-                    <p>Можем собрать букет и передать его в доставку всего за час.</p>
-                </li>
-                <li> 
-                    <h3>Всегда свежие цветы</h3>
-                    <p>Тщательно следим за состоянием цветов, а опытные флористы отбирают для букетов каждый цветок.</p>
-                </li>
-                <li> 
-                    <h3>Отправляем фото цветов</h3>
-                    <p>Перед доставкой сделаем фотографию букета и отправим нам.</p>
-                </li>
-            </ul>
-        </section>
-        <section class="popular-bouquet">
-            <h2>Популярные букеты</h2>
-            <div class="popular-bouquet__tenderness">
-                <h3>Букет &laquo;Нежность&raquo;</h3>
-                <p class="popular-bouquet__description">Элегантный букет, который станет отличным подарком на день рождения или юбилей.</p>
-                <p class="popular-bouquet__size">30&thinsp; &#215; &thinsp;40 см</p>
-                <p class="popular-bouquet__price">3600 руб.</p>
-                <button class="popular-bouquet__button-order" type="button">Заказать</button>
+        <header>
+            <div class="header-wrapper">
+                <nav class="header-nav">
+                    <a class="header-logo" href="#"><img src="img/logo_header.svg" width="100" height="33" alt="Логотип Ботаники"></a>
+                    <ul class="header-list">
+                        <li><a href="#">Каталог</a></li>
+                        <li><a href="#">Доставка и оплата</a></li>
+                        <li><a href="#">Отзывы</a></li>
+                        <li><a href="#">Спецпредложения</a></li>
+                        <li><a href="#">Контакты</a></li>
+                        <li><a href="#">Корзина</a></li>
+                    </ul>
+                </nav>
             </div>
-            <img src="img/bouquet_tenderness.png" width="387" height="438" alt='Букет "Нежность"'>
-            <div class="button-wrapper">
-            <button class="popular-bouquet__slider-button-back" type="button"><span class="visually-hidden">Назад</span></button>
-            <button class="popular-bouquet__slider-button-forward" type="button"><span class="visually-hidden">Вперед</span></button>
-            </div>
-        </section>
-        <section class="bouquet-catalog">
-            <ul class="bouquet-catalog__list">
-                <li><a href="#">
-                    <div>
-                    <h3>Свадебные букеты</h3>
-                    <p>Букеты для невест</p>
-                    </div>
-                </a></li>
-                <li><a href="#">
-                    <div>
-                    <h3>Букеты с пионами</h3>
-                    <p>Букеты с сезонными пионами</p>
-                </div>
-                </a></li>
-                <li><a href="#">
-                    <div>
-                    <h3>Выбрать букет</h3>
-                    <p>Букеты в ассортименте</p>
-                </div>
-                </a></li>
-            </ul>
-        </section>
-        <section class="sale">
-            <div class="sale__text">
-                <h2>Скидка 10% <br> на первый заказ</h2>
-                <p>Если заказываете у нас букет впервые &mdash; при оформлении заказа введите промокод &laquo;Botanika2021&raquo; и получите скидку 10%</p>
-            </div>
-            <div class="sale__img">
-            <img src="img/bouquet_discount.jpg" width="590" height="391" alt="Букет цветов">
-            </div>
-        </section>   
-        <section class="ideal-bouquet">
-            <h2>4 шага к идеальному букету</h2>
-            <ul class="ideal-bouquet__list">
-                <li>
-                    <h3>Заказ</h3>
-                    <p>Выбирите понравившийся букет из каталога и оформите заказ</p>
-                </li>
-                <li>
-                    <h3>Уточнение деталей</h3>
-                    <p>Наш флорист позвонит вам <br> после оформления заказа, чтобы уточнить детали</p>
-                </li>
-                <li>
-                    <h3>Оплата</h3>
-                    <p>Оплатить заказ можно онлайн <br> на сайте или при получении</p>
-                </li>
-                <li>
-                    <h3>Доставка</h3>
-                    <p>Курьер позвонит за час до прибытия и доставит заказ вовремя</p>
-                </li>
-            </ul>
-        </section>
-        <section class="news">
-            <div class="news__social">
-                <h2>Следите за нашими новостями</h2>
-                <p>Подписывайтесь на наши соцсети и узнавайте <br> о новинках и акциях первым.</p>
+        </header>
+        <main>
+            <section class="authors-bouquet">
+	            <div>
+            	    <h1>Авторские букеты <span>в Петербурге</span></h1>
+            	    <p>Оригинальные свежие букеты с доставкой по всему городу</p>
+            	    <a href="#">Смотреть каталог</a>
+	            </div>
+                <img src="img/bouquet_of_tulips.jpg" width="386" height="404" alt="Букет с тюльпанами">
+                <img src="img/bouquet_of_roses.jpg" width="387" height="420" alt="Букет с розами">
+            </section>
+            <section class="advantages">
                 <ul>
+                    <li>
+                        <h3>Быстрая доставка</h3>
+                        <p>Можем собрать букет и передать его в доставку всего за час.</p>
+                    </li>
+                    <li> 
+                        <h3>Всегда свежие цветы</h3>
+                        <p>Тщательно следим за состоянием цветов, а опытные флористы отбирают для букетов каждый цветок.</p>
+                    </li>
+                    <li> 
+                        <h3>Отправляем фото цветов</h3>
+                        <p>Перед доставкой сделаем фотографию букета и отправим нам.</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="popular-bouquet">
+                <h2>Популярные букеты</h2>
+                <div class="popular-bouquet__tenderness">
+                    <h3>Букет &laquo;Нежность&raquo;</h3>
+                    <p class="popular-bouquet__description">Элегантный букет, который станет отличным подарком на день рождения или юбилей.</p>
+                    <p class="popular-bouquet__size">30&thinsp; &#215; &thinsp;40 см</p>
+                    <p class="popular-bouquet__price">3600 руб.</p>
+                    <button class="popular-bouquet__button-order" type="button">Заказать</button>
+                </div>
+                <img src="img/bouquet_tenderness.png" width="387" height="438" alt='Букет "Нежность"'>
+                <div class="button-wrapper">
+                    <button class="popular-bouquet__slider-button-back" type="button"><span class="visually-hidden">Назад</span></button>
+                    <button class="popular-bouquet__slider-button-forward" type="button"><span class="visually-hidden">Вперед</span></button>
+                </div>
+            </section>
+            <section class="bouquet-catalog">
+                <ul class="bouquet-catalog__list">
+                    <li><a href="#">
+                            <div>
+                                <h3>Свадебные букеты</h3>
+                                <p>Букеты для невест</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <div>
+                                <h3>Букеты с пионами</h3>
+                                <p>Букеты с сезонными пионами</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li><a href="#">
+                            <div>
+                                <h3>Выбрать букет</h3>
+                                <p>Букеты в ассортименте</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+            <section class="sale">
+                <div class="sale__text">
+                    <h2>Скидка 10% <br> на первый заказ</h2>
+                    <p>Если заказываете у нас букет впервые &mdash; при оформлении заказа введите промокод &laquo;Botanika2021&raquo; и получите скидку 10%</p>
+                </div>
+                <div class="sale__img">
+                    <img src="img/bouquet_discount.jpg" width="590" height="391" alt="Букет цветов">
+                </div>
+            </section>   
+            <section class="ideal-bouquet">
+                <h2>4 шага к идеальному букету</h2>
+                <ul class="ideal-bouquet__list">
+                    <li>
+                        <h3>Заказ</h3>
+                        <p>Выбирите понравившийся букет из каталога и оформите заказ</p>
+                    </li>
+                    <li>
+                        <h3>Уточнение деталей</h3>
+                        <p>Наш флорист позвонит вам <br> после оформления заказа, чтобы уточнить детали</p>
+                    </li>
+                    <li>
+                        <h3>Оплата</h3>
+                        <p>Оплатить заказ можно онлайн <br> на сайте или при получении</p>
+                    </li>
+                    <li>
+                        <h3>Доставка</h3>
+                        <p>Курьер позвонит за час до прибытия и доставит заказ вовремя</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="news">
+                <div class="news__social">
+                    <h2>Следите за нашими новостями</h2>
+                    <p>Подписывайтесь на наши соцсети и узнавайте <br> о новинках и акциях первым.</p>
+                    <ul>
+                        <li><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
+                        <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+                        <li><a href="#"><span class="visually-hidden">Твиттер</span></a></li>
+                    </ul>
+                </div>
+                    <img class="news__bouquet-1" src="img/bouquet_news_1.jpg" width="285" height="220" alt="Букет цветов">
+                    <img class="news__bouquet-2" src="img/bouquet_news_2.jpg" width="285" height="220" alt="Букет цветов">
+                    <img class="news__bouquet-3" src="img/bouquet_news_3.jpg" width="387" height="460" alt="Букет цветов">
+            </section>
+            <section class="reviews">
+                <h2>Отзывы</h2>
+                <ul>
+                    <li>
+                        <blockquote>Все очень понравилось! Быстрое оформление заказа, выбор удобного времени доставки. Всем большое спасибо!</blockquote>
+                        <cite>Марина</cite>
+                    </li>
+                    <li>
+                        <blockquote>Внимательные флористы, вежливые. Магазин находится прям рядом с метро. Букет очень понравился, буду еще заказывать!</blockquote>
+                        <cite>Татьяна</cite>
+                    </li>
+                    <li>
+                        <blockquote>Выбор букетов на любой вкус <br> и цену. Бывают хорошие скидки, <br> а флористы всегда помогут и точно соберут красивый букет!</blockquote>
+                        <cite>Ольга</cite>
+                    </li>
+                </ul>
+            </section>
+            <section class="contacts">
+                <div class="contacts__card">
+                    <h2>Мы ждем вас</h2>
+                    <p>Приходите к нам:</p>
+                    <p>Санкт-Петербург, <br> ул. Большая Конюшенная, 19</p>
+                    <p>Режим работы:</p>
+                    <p>Пн-Вск, c 9-00 до 20-00</p>
+                    <p>Позвоните нам:</p>
+                    <p><a href="tel:+7(812)983-47-19">+7 &thinsp; (812) &thinsp; 983-47-19</a></p>
+                    <p>Напишите нам:</p>
+                    <p><a href="mailto:info@botanika.ru">info@botanika.ru</a></p>
+                </div>
+                <img src="img/botanika_map.png" width="1440" height="645" alt="Карта офиса по адресу: Санкт-Петербург, ул. Большая Конюшенная, 19">
+            </section>
+        </main>
+        <footer>
+            <div class="footer-wrapper">
+                <a href="#"><img src="img/logo_footer.svg" width="100" height="33" alt="Логотип Ботаники"></a>
+                <ul class="footer-nav">
+                    <li><a href="#">Каталог</a></li>
+                    <li><a href="#">Доставка и оплата</a></li>
+                    <li><a href="#">Отзывы</a></li>
+                    <li><a href="#">Спецпредложения</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+                <ul class="footer-link">
                     <li><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
                     <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
                     <li><a href="#"><span class="visually-hidden">Твиттер</span></a></li>
                 </ul>
             </div>
-                <img class="news__bouquet-1" src="img/bouquet_news_1.jpg" width="285" height="220" alt="Букет цветов">
-                <img class="news__bouquet-2" src="img/bouquet_news_2.jpg" width="285" height="220" alt="Букет цветов">
-                <img class="news__bouquet-3" src="img/bouquet_news_3.jpg" width="387" height="460" alt="Букет цветов">
-                </section>
-        <section class="reviews">
-            <h2>Отзывы</h2>
-            <ul>
-                <li>
-                    <blockquote>Все очень понравилось! Быстрое оформление заказа, выбор удобного времени доставки. Всем большое спасибо!</blockquote>
-                    <cite>Марина</cite>
-                </li>
-                <li>
-                    <blockquote>Внимательные флористы, вежливые. Магазин находится прям рядом с метро. Букет очень понравился, буду еще заказывать!</blockquote>
-                    <cite>Татьяна</cite>
-                </li>
-                <li>
-                    <blockquote>Выбор букетов на любой вкус <br> и цену. Бывают хорошие скидки, <br> а флористы всегда помогут и точно соберут красивый букет!</blockquote>
-                    <cite>Ольга</cite>
-                </li>
-            </ul>
-        </section>
-        <section class="contacts">
-            <div class="contacts__card">
-                <h2>Мы вас ждем</h2>
-                <p>Приходите к нам:</p>
-                <p>Санкт-Петербург, <br> ул. Большая Конюшенная, 19</p>
-                <p>Режим работы:</p>
-                <p>Пн-Вск, 9-00 до 20-00</p>
-                <p>Позвоните нам:</p>
-                <p><a href="tel:+7(812)983-47-19">+7 &nbsp; (812) &nbsp; 983-47-19</a></p>
-                <p>Напишите нам:</p>
-                <p><a href="mailto:info@botanika.ru">info@botanika.ru</a></p>
-            </div>
-            <img src="img/botanika_map.png" width="1440" height="645" alt="Карта офиса по адресу: Санкт-Петербург, ул. Большая Конюшенная, 19">
-        </section>
-    </main>
-    <footer>
-        <a href="#"><img src="img/logo_footer.svg" width="100" height="33" alt="Логотип Ботаники"></a>
-        <ul class="footer-nav">
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Доставка и оплата</a></li>
-            <li><a href="#">Отзывы</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-            <li><a href="#">Контакты</a></li>
-        </ul>
-        <ul class="footer-link">
-            <li><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
-            <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-            <li><a href="#"><span class="visually-hidden">Твиттер</span></a></li>
-        </ul>
-    </footer>
+        </footer>
     </div>
 </body>
 </html>
