--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                 <img src="img/bouquet_of_roses.jpg" width="387" height="420" alt="Букет с розами">
             </section>
             <section class="advantages">
-                <ul>
-                    <li>
+                <ul class="advantages__list">
+                    <li class="advantages__item quick-delivery">
                         <h3>Быстрая доставка</h3>
                         <p>Можем собрать букет и передать его в доставку всего за час.</p>
                     </li>
-                    <li> 
+                    <li class="advantages__item fresh-flowers"> 
                         <h3>Всегда свежие цветы</h3>
                         <p>Тщательно следим за состоянием цветов, а опытные флористы отбирают для букетов каждый цветок.</p>
                     </li>
-                    <li> 
+                    <li class="advantages__item send-foto" > 
                         <h3>Отправляем фото цветов</h3>
                         <p>Перед доставкой сделаем фотографию букета и отправим нам.</p>
                     </li>
@@ -69,21 +69,21 @@
             </section>
             <section class="bouquet-catalog">
                 <ul class="bouquet-catalog__list">
-                    <li><a href="#">
+                    <li class="bouquet-catalog__card wedding-bouquet"><a href="#">
                             <div>
                                 <h3>Свадебные букеты</h3>
                                 <p>Букеты для невест</p>
                             </div>
                         </a>
                     </li>
-                    <li><a href="#">
+                    <li class="bouquet-catalog__card pions-bouquet"><a href="#">
                             <div>
                                 <h3>Букеты с пионами</h3>
                                 <p>Букеты с сезонными пионами</p>
                             </div>
                         </a>
                     </li>
-                    <li><a href="#">
+                    <li class="bouquet-catalog__card choose-bouquet"><a href="#">
                             <div>
                                 <h3>Выбрать букет</h3>
                                 <p>Букеты в ассортименте</p>
@@ -104,32 +104,31 @@
             <section class="ideal-bouquet">
                 <h2>4 шага к идеальному букету</h2>
                 <ul class="ideal-bouquet__list">
-                    <li>
+                    <li class="ideal-bouquet__item order">
                         <h3>Заказ</h3>
                         <p>Выбирите понравившийся букет из каталога и оформите заказ</p>
                     </li>
-                    <li>
+                    <li class="ideal-bouquet__item details">
                         <h3>Уточнение деталей</h3>
                         <p>Наш флорист позвонит вам <br> после оформления заказа, чтобы уточнить детали</p>
                     </li>
-                    <li>
+                    <li class="ideal-bouquet__item payment">
                         <h3>Оплата</h3>
                         <p>Оплатить заказ можно онлайн <br> на сайте или при получении</p>
                     </li>
-                    <li>
+                    <li class="ideal-bouquet__item delivery">
                         <h3>Доставка</h3>
                         <p>Курьер позвонит за час до прибытия и доставит заказ вовремя</p>
                     </li>
-                </ul>
             </section>
             <section class="news">
-                <div class="news__social">
+                <div class="news__info">
                     <h2>Следите за нашими новостями</h2>
                     <p>Подписывайтесь на наши соцсети и узнавайте <br> о новинках и акциях первым.</p>
-                    <ul>
-                        <li><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
-                        <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-                        <li><a href="#"><span class="visually-hidden">Твиттер</span></a></li>
+                    <ul class="news__link">
+                        <li class="social news__insta"><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
+                        <li class="social news__face"><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+                        <li class="social news__twit"><a href="#"><span class="visually-hidden">Твиттер</span></a></li>
                     </ul>
                 </div>
                     <img class="news__bouquet-1" src="img/bouquet_news_1.jpg" width="285" height="220" alt="Букет цветов">
@@ -179,9 +178,9 @@
                     <li><a href="#">Контакты</a></li>
                 </ul>
                 <ul class="footer-link">
-                    <li><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
-                    <li><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-                    <li><a href="#"><span class="visually-hidden">Твиттер</span></a></li>
+                    <li class="social footer__insta"><a href="#"><span class="visually-hidden">Инстаграмм</span></a></li>
+                    <li class="social footer__face"><a href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+                    <li class="social footer__twit"><a href="#"><span class="visually-hidden">Твиттер</span></a></li>
                 </ul>
             </div>
         </footer>
