--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/min_style.css">
     <title>Ботаника-цветы в Петербурге</title>
 </head>
 <body>
@@ -70,24 +70,18 @@
             <section class="bouquet-catalog">
                 <ul class="bouquet-catalog__list">
                     <li class="bouquet-catalog__card wedding-bouquet"><a href="#">
-                            <div>
                                 <h3>Свадебные букеты</h3>
                                 <p>Букеты для невест</p>
-                            </div>
                         </a>
                     </li>
                     <li class="bouquet-catalog__card pions-bouquet"><a href="#">
-                            <div>
                                 <h3>Букеты с пионами</h3>
                                 <p>Букеты с сезонными пионами</p>
-                            </div>
                         </a>
                     </li>
                     <li class="bouquet-catalog__card choose-bouquet"><a href="#">
-                            <div>
                                 <h3>Выбрать букет</h3>
                                 <p>Букеты в ассортименте</p>
-                            </div>
                         </a>
                     </li>
                 </ul>
@@ -120,6 +114,7 @@
                         <h3>Доставка</h3>
                         <p>Курьер позвонит за час до прибытия и доставит заказ вовремя</p>
                     </li>
+                </ul>
             </section>
             <section class="news">
                 <div class="news__info">
@@ -153,16 +148,18 @@
                 </ul>
             </section>
             <section class="contacts">
-                <div class="contacts__card">
-                    <h2>Мы ждем вас</h2>
-                    <p>Приходите к нам:</p>
-                    <p>Санкт-Петербург, <br> ул. Большая Конюшенная, 19</p>
-                    <p>Режим работы:</p>
-                    <p>Пн-Вск, c 9-00 до 20-00</p>
-                    <p>Позвоните нам:</p>
-                    <p><a href="tel:+7(812)983-47-19">+7 &thinsp; (812) &thinsp; 983-47-19</a></p>
-                    <p>Напишите нам:</p>
-                    <p><a href="mailto:info@botanika.ru">info@botanika.ru</a></p>
+                <div class="contacts__wrapper">
+                    <div class="contacts__card">
+                        <h2>Мы ждем вас</h2>
+                        <p>Приходите к нам:</p>
+                        <p>Санкт-Петербург, <br> ул. Большая Конюшенная, 19</p>
+                        <p>Режим работы:</p>
+                        <p>Пн-Вск, c 9-00 до 20-00</p>
+                        <p>Позвоните нам:</p>
+                        <p><a href="tel:+7(812)983-47-19">+7 &thinsp; (812) &thinsp; 983-47-19</a></p>
+                        <p>Напишите нам:</p>
+                        <p><a href="mailto:info@botanika.ru">info@botanika.ru</a></p>
+                    </div>
                 </div>
                 <img src="img/botanika_map.png" width="1440" height="645" alt="Карта офиса по адресу: Санкт-Петербург, ул. Большая Конюшенная, 19">
             </section>
